--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -105,3 +105,34 @@
   fill: #fff;
   color: #fff
 }
+
+/* .card .card-body .container{
+  position:relative;
+  margin:auto;
+  height:50vh;
+  height:50vw;
+} */
+
+.card .card-body .container{
+  position: relative;
+  width: 100%;
+  max-width: 90vw;
+  min-height: 400px;
+  height: auto;
+
+}
+
+.card .card-body .container-bar{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  max-width: 90vw;
+  min-height: 400px;
+  height: auto;
+}
+
+.canvas-wrapper {
+  width: 100%;
+  max-width: 600px; /* Adjust based on your layout */
+}
