--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -123,7 +123,7 @@
 }
 
 .card .card-body .container-bar{
-  display: flex;
+  position: relative;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -135,4 +135,23 @@
 .canvas-wrapper {
   width: 100%;
   max-width: 600px; /* Adjust based on your layout */
+}
+
+.sidebar-menu {
+  transition: transform 0.3s ease-in-out;
+}
+
+/* Hide sidebar on small screens */
+@media (max-width: 768px) {
+  .sidebar-menu {
+    width: 100%; /* Full width on smaller screens */
+    transform: translateX(-100%); /* Hide sidebar by default */
+    position: fixed; /* Make it overlay */
+    z-index: 10;
+  }
+
+  /* When sidebar is open */
+  .sidebar-menu.open {
+    transform: translateX(0); /* Slide sidebar in from the left */
+  }
 }
